# kernels_bench

./: .gitignore  IDEAS.md  README.md  pyproject.toml
examples/: bench_as_library.py  bench_elementwise.py  bench_gelu.py  bench_layer_norm.py
src/kernels_bench/: __init__.py  bench.py  cli.py  device.py  display.py  progress.py  runner.py  runtime.py  spec.py  validate.py
src/kernels_bench/runtime/: __init__.py  _base.py  _cuda.py  _mps.py
tests/: conftest.py  test_bench.py  test_cli.py  test_device.py  test_display.py  test_runner.py  test_runtime.py  test_spec.py  test_validate.py
