[project]
name = "kernels-bench"
version = "0.1.0"
description = "Benchmark tool for HuggingFace Kernels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kernels",
    "torch>=2.5",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "numpy",
]

[project.scripts]
kernels-bench = "kernels_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernels_bench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0",
    "pytest>=8.0",
]
